Fixed high contrast issues

--- a/src/components/ActionMenu/components/MenuAction/MenuAction.scss
+++ b/src/components/ActionMenu/components/MenuAction/MenuAction.scss
@@ -65,6 +65,7 @@ $difference-between-touch-area-and-backdrop: control-height() -
 
     &:hover {
       background: var(--p-action-secondary-hovered);
+      @include high-contrast-outline;
     }
 
     &:focus {
